Arrays and casts.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,7 +62,7 @@
         <div class="editor-panel">
             <div class="editor-toolbar">
                 <button class="btn" id="compile-btn">🚀 Compile & Run</button>
-                <button class="btn secondary" id="load-bounce">Bounce Ball</button>
+                <button class="btn secondary" id="load-pong">Pong</button>
                 <button class="btn secondary" id="clear-editor">New File</button>
                 <button id="about-btn" class="about-button" title="About Pixardis IDE">ℹ️ About</button>
             </div>
