--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,7 +24,7 @@
                 <div class="about-section">
                     <h3>Tech Stack (if you care):</h3>
                     <ul>
-                        <li>🦀 <strong>Rust</strong> – Because C++ wasn't angry enough</li>
+                        <li>🦀 <strong>Rust</strong> – 100% safety, 0% soundness</li>
                         <li>🌐 <strong>WebAssembly</strong> – Browser pretending it's a real machine</li>
                         <li>📝 <strong>Monaco Editor</strong> – What passes as an IDE these days</li>
                         <li>🎨 <strong>Canvas</strong> – Pixel output. No shaders. No mercy.</li>
@@ -41,7 +41,7 @@
                     <h3>Why does this exist?</h3>
                     <p>Because that display was an insult to silicon.</p>
                     <p>Because JavaScript isn't a runtime. It's regret.</p>
-                    <p>Because I need therapy.</p>
+                    <p>Cheaper than therapy.</p>
                     <p>Because I can.</p>
                     <p>Goddamn it, copilot, enough.</p>
                 </div>
