Added WASM build script for Unix-based systems. Conditional compilation of web solution to avoid ugly IDE squiggles.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,9 +24,9 @@
                 <div class="about-section">
                     <h3>Tech Stack (if you care):</h3>
                     <ul>
-                        <li>🦀 <strong>Rust</strong> – 100% safety, 0% soundness</li>
-                        <li>🌐 <strong>WebAssembly</strong> – Browser pretending it's a real machine</li>
-                        <li>📝 <strong>Monaco Editor</strong> – What passes as an IDE these days</li>
+                        <li>🦀 <strong>Rust</strong> – 0% unsafe, 100% unsound.</li>
+                        <li>🌐 <strong>WebAssembly</strong> – Browser pretending it's a real machine.</li>
+                        <li>📝 <strong>Monaco Editor</strong> – What passes as an IDE these days.</li>
                         <li>🎨 <strong>Canvas</strong> – Pixel output. No shaders. No mercy.</li>
                     </ul>
                 </div>
